--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Love For You</title>
-    <link rel="stylesheet" href=".\css\style.css">
+    <link rel="stylesheet" href=".\style.css">
 
 </head>
 <body>
@@ -72,7 +72,7 @@
     
     <footer>Made with ❤️ just for you</footer>
 
-    <script src=".\js\script.js"></script>
+    <script src=".\script.js"></script>
     
 </body>
 </html>
