--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         
         <div class="photo-gallery">
             <div class="photo-frame">
-                <img src=".\img\1st.jfif" alt="Our first date" class="photo">
+                <img src="/img/1st.jfif" alt="Our first date" class="photo">
                 <div class="photo-caption">I</div>
             </div>
             <div class="photo-frame">
-                <img src=".\img\2nd.jfif" alt="Our favorite trip" class="photo">
+                <img src="/img/2nd.jfif" alt="Our favorite trip" class="photo">
                 <div class="photo-caption">LOVE</div>
             </div>
             <div class="photo-frame">
-                <img src=".\img\3rd.jfif" alt="That time we laughed for hours" class="photo">
+                <img src="/img/3rd.jfif" alt="That time we laughed for hours" class="photo">
                 <div class="photo-caption">YOU</div>
             </div>
             <div class="photo-frame">
-                <img src=".\img\4th.jfif" alt="Just us being us" class="photo">
+                <img src="/img/4th.jfif" alt="Just us being us" class="photo">
                 <div class="photo-caption">LANGGA</div>
             </div>
         </div>
@@ -49,7 +49,7 @@
         
         <div class="music-player">
             <div class="song-title">"Happiness" by Rex Orange County</div>
-            <audio id="love-song" src=".\Rex Orange County - Happiness (Official Audio).mp3"></audio>
+            <audio id="love-song" src="/Rex Orange County - Happiness (Official Audio).mp3"></audio>
             <div class="music-controls">
                 <button class="play-button" id="play-button">▶</button>
                 <div class="song-progress">
