--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ footer {
                 <li>Your incredible strength and determination</li>
                 <li>The sound of your laugh - it's my favorite melody</li>
                 <li>How you care so deeply about me</li>
+                <li>You never leave me</li>
             </ul>
         </div>
         
